--- a/cat.html
+++ b/cat.html
@@ -2,7 +2,7 @@
 <html>
     <body>
     <h1> Hey! </h1>
-    Been dying... to meet you <br >
+    Been dying... to meet you <br />
     <img src="https://commons.wikimedia.org/wiki/Category:Cats#/media/File:Greycat.jpg"
     </body>
 </html>
